k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ci
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ci
  template:
    metadata:
      labels:
        app: nginx-ci
    spec:
      volumes:
        - name: nginx-stub-status
          configMap:
            name: nginx-stub-status
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-stub-status
              mountPath: /etc/nginx/conf.d/stub_status.conf
              subPath: stub_status.conf

        - name: nginx-exporter          # ← c'est ça qui manque
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - --nginx.scrape-uri=http://localhost:8080/stub_status
          ports:
            - containerPort: 9113
