k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-svc
  namespace: default
  labels:
    app: nginx-ci
spec:
  selector:
    app: nginx-ci
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics        # ← pour le node-exporter sidecar
      port: 9113
      targetPort: 9113
